markdown转pdf文件(解决公式显示问题)

--- a/notebook/6-位置编码.md
+++ b/notebook/6-位置编码.md
@@ -16,11 +16,11 @@
 
 对于一个含有 N 个词元的文本序列：
 
-$$S_N = \\{ w_i \\}_{i = 1}^{N}$$
+$$S_N = \{ w_i \}_{i = 1}^{N}$$
 
 其中， $w_i$ 表示序列中的第 $i$ 个词元。而序列 $S_N$ 对应的嵌入向量表示为：
 
-$$E_N = \\{ x_i \\}_{i = 1}^{N}$$
+$$E_N = \{ x_i \}_{i = 1}^{N}$$
 
 其中， $x_i$ 表示序列中的第 $i$ 个词元对应的 $d$ 维嵌入向量(每个 $x_i$ 都是一个 $d$ 维向量)。
 
@@ -51,7 +51,7 @@ $$o_m = \sum_{n=1}^N a_{m,n} v_n.$$
  - 可扩展性：由于 Sinusoidal 函数的周期性质，这种方法可以潜在地泛化到比训练期间遇到的更长的序列长度上，这对于处理“变长”序列特别有用；
  - 加法方式：通常情况下，绝对位置编码会直接加到词嵌入上，作为输入的一部分传递给模型的第1层。
 
-简言之，Sinusoidal 位置编码是在计算 $q$、 $k$ 和 $v$ 之前，预先计算一个位置编码向量 $p_i$ ( $p_i$ 与嵌入向量 $x_i$ 的维度一样，都是 $d$ 维的)与嵌入向量 $x_i$ 直接相加，再乘以相应的变换矩阵 $W_{\\{q,k,v\\}}$ 即得到  $q$、 $k$ 和 $v$ ：
+简言之，Sinusoidal 位置编码是在计算 $q$、 $k$ 和 $v$ 之前，预先计算一个位置编码向量 $p_i$ ( $p_i$ 与嵌入向量 $x_i$ 的维度一样，都是 $d$ 维的)与嵌入向量 $x_i$ 直接相加，再乘以相应的变换矩阵 $W_{\{q,k,v\}}$ 即得到  $q$、 $k$ 和 $v$ ：
 
 $$q_m = f_q(x_m, m) = W_q (x_m + p_m)$$
 
@@ -65,7 +65,7 @@ $$p_{i,2t} = \sin \left( \frac{i}{10000^{2i/d}} \right) $$
 
 $$p_{i,2t+1} = \cos \left( \frac{i}{10000^{2i/d}} \right) $$
 
-其中， $p_{i,2t}$ 对应于第 $i$ 个词元的嵌入向量 $x_i$ 的第 $2t$ 位置(偶数索引位置)的位置编码； $p_{i,2t+1}$ 对应于第 $i$ 个词元的嵌入向量 $x_i$ 的第 $2t+1$ 位置(奇数索引位置)的位置编码； $d$ 是嵌入向量的维度； $\\{ 2t, 2t+1\\} \subset \\{1, 2, ..., d\\}$ 。
+其中， $p_{i,2t}$ 对应于第 $i$ 个词元的嵌入向量 $x_i$ 的第 $2t$ 位置(偶数索引位置)的位置编码； $p_{i,2t+1}$ 对应于第 $i$ 个词元的嵌入向量 $x_i$ 的第 $2t+1$ 位置(奇数索引位置)的位置编码； $d$ 是嵌入向量的维度； $\{ 2t, 2t+1\} \subset \{1, 2, ..., d\}$ 。
 
 这种编码方式确保了对于任何固定的偏移量(后面一个词元相对于前面某个词元的位置偏移距离) $k$ ，后一个词元的位置编码 $p_{i+k}$ 都可以表示为前面第 $i$ 个词元的位置编码 $p_i$ 的线性函数。
 
@@ -193,7 +193,7 @@ $$g(x_m, x_n, m-n) = \text{Re} \left[ (W_qx_m)(W_kx_n)^* e^{i(m-n) \theta} \righ
 <img src="../images/notebook6/formula_11.png" alt="formula_11.png" width="640">
 </div>
 
-其中， $\Theta = \\{ \theta_t = 10000^{-2(t-1)/d},\quad i \in \\{1,2,...,d\\} \\}$ 是预设的旋转角度。
+其中， $\Theta = \{ \theta_t = 10000^{-2(t-1)/d},\quad i \in \{1,2,...,d\} \}$ 是预设的旋转角度。
 
 在自注意力机制中，我们近一步有：
 
