--- a/notebook/0-新时代的前奏.md
+++ b/notebook/0-新时代的前奏.md
@@ -24,7 +24,7 @@
 
 那又有什么必要在这里专门讨论 "AI 技术将服务于谁"呢？就像是我们似乎从没有讨论过"犁和蒸汽机服务于谁"一样，这是一个值得探讨的问题吗？
 
-但这次可能真的不一样！以往的技术进步都是建立在"人"这个基础之上的，没有人的参与，就创造不出剩余价值。无论是犁，还是蒸汽机，抑或是个人计算机，都是依附于人(劳动力)的"工具"，也创造了更多的劳动力需求。而随着 AI 技术的发展，我们看到了一个可能的趋势，"附加 AI 的工具"逐渐在很大程度上摆脱对"人"的依赖，成为一个可以独立思考(虽然这种观点是存疑的，甚至可以说是伪命题的，但不可否认它的行为很像独立思考)，并完成复杂任务的主体。这意味着，社会生产活动的不再必须基于大量的劳动力操纵工具，而是由少数人维护 AI 来开发、利用、消费自然资源。
+因为这次可能真的不一样！以往的技术进步都是建立在"人"这个基础之上的，没有人的参与，就创造不出剩余价值。无论是犁，还是蒸汽机，抑或是个人计算机，都是依附于人(劳动力)的"工具"，也创造了更多的劳动力需求。而随着 AI 技术的发展，我们看到了一个可能的趋势，"附加 AI 的工具"逐渐在很大程度上摆脱对"人"的依赖，成为一个可以独立思考(虽然这种观点是存疑的，甚至可以说是伪命题的，但不可否认它的行为很像独立思考)，并完成复杂任务的主体。这意味着，社会生产活动的不再必须基于大量的劳动力操纵工具，而是由少数人维护 AI 来开发、利用、消费自然资源。
 
 一个极其美好的愿景随之而来：新时代的人类社会，庞大的 AI 将人类劳动力解放出来，劳动成了一种生活爱好和享受，生产力高度发达、物质生活极大丰富，人在明确、有限的约束(物质的自然资源和意识的社会规则)之下自由平等地享受这一切！
 
