--- a/notebook/0-新时代的前奏.md
+++ b/notebook/0-新时代的前奏.md
@@ -50,7 +50,7 @@
 
 真正无产阶级的出现意味着社会进步的可能性和必然结果，但并不意味着社会进步的具体实现。而且我们有一个不好的开端：主流的 AI 技术被少数寡头所控制。
 
-AI 技术的发展需要大量的数据和计算资源，也需要很好的技术沉淀，个人或者一般规模的公司从一开始就被迫将自己定位于"消费者"的角色，而关于 AI 技术的开创性工作几乎都是由少数大公司(或者即将成为少数大公司的公司)所完成的。这一方面有利于 AI 技术的发展，毕竟大公司可以调集大量的资源形成技术突破，而技术突破带来高额的回报进一步淘汰掉稍弱小的公司，也进一步激励着它继续加大投入，形成一个典型的资本主义运作方式。
+AI 技术的实现需要大量的数据和计算资源，也需要很好的技术沉淀，个人或者一般规模的公司从一开始就被迫将自己定位于"消费者"的角色，而关于 AI 技术的开创性工作几乎都是由少数大公司(或者即将成为少数大公司的公司)所完成的。这一方面有利于 AI 技术的发展，毕竟大公司可以调集大量的资源形成技术突破，而技术突破带来高额的回报进一步淘汰掉稍弱小的公司，也进一步激励着它继续加大投入，形成一个典型的资本主义运作方式。
 
 当 AI 技术发展到很高的水平，掌握了技术壁垒的这些大公司，最终会无偿地将这些技术和产品提供给全人类使用吗？还是会依靠形成的技术壁垒攫取高额利润，甚至控制全人类的生活？前者显然违背了"经济学"对人的基本假设。
 
