--- a/notebook/0-新时代的前奏.md
+++ b/notebook/0-新时代的前奏.md
@@ -38,7 +38,7 @@
 
 **进步的、正义的、服务全人类的 AI 时代必将到来！**
 
-**但这个过程必然是曲折的，需要我辈及后来人充分发挥主观能动性以争取最小代价促使这一天的到来。**
+**但这个过程必然是曲折的，需要我辈及后来人充分发挥主观能动性争取以最小代价促使这一天的到来。**
 
 ### 真正的无产阶级
 
